--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,14 @@ plugins {
     id 'java'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.myapp.frontendactivityfinder.Application'
+        )
+    }
+}
+
 group = 'com.myapp'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
