--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-#server.port=8081
-back.api.endpoint=https://evening-brook-59467.herokuapp.com/v1
+server.port=8081
+back.api.endpoint=http://localhost:8080/v1
